@@ -291,7 +291,9 @@
 						</div>
 					</div>
 					<div class="tc-footer">
-						<div class="actions-right">编辑事件</div>
+						<div class="actions-right">
+							<a id="event-complete" eventid="" href="javascript:void(0);">完成</a>
+						</div>
 						<div class="actions-left">
 							<a id="event-delete" eventid="" href="javascript:void(0);">删除</a>
 						</div>
